Update package Run standard

--- a/sample.html
+++ b/sample.html
@@ -7,8 +7,9 @@
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<link rel="stylesheet" href="css/tictactoe.css">
 		<script src="node_modules/jquery/dist/jquery.min.js"></script>
-		<script src="dist/tictactoe.min.js"></script>
-		<script src="dist/script.js"></script>
+		<script src="src/TictactoeView.js"></script>
+		<script src="src/Tictactoe.js"></script>
+		<script src="script.js"></script>
 	</head>
 	<body class="wrapper">
 
